# minesLunabotics2023

./: MakeROSMap.py  cam.yaml  depth.yaml  map.pgm  map.xcf  map.yaml  nav2_params.yaml
Arduino/Uno/Uno/: Uno.ino
Arduino/ardComms/: Comms.ino  ardComms.ino  cmdVelToVels.ino  controller.ino  digMotors.ino  driveMotorLibrary.ino  encoders.ino  stepperMotorLibrary.ino  vars.h
Arduino/tester/: tester.ino
LARI_urdf/: CMakeLists.txt  package.xml
LARI_urdf/config/: joint_names_LARI_urdf.yaml
LARI_urdf/launch/: display.launch  display.launch.py  gazebo.launch
LARI_urdf/meshes/: base_link_collision.STL  fl_steering_link.STL  fl_wheel_link.STL  fl_wheel_link_collision.STL  fr_steering_link.STL  fr_wheel_link.STL  fr_wheel_link_collision.STL  rl_steering_link.STL  rl_wheel_link.STL  rl_wheel_link_collision.STL  rr_steering_link.STL  rr_wheel_link.STL  rr_wheel_link_collision.STL
LARI_urdf/urdf/: LARI_urdf.csv  LARI_urdf.urdf  LARI_urdf.urdf.xacro  model.config
UWB/: CMakeLists.txt  package.xml  tagPose.py
UWB/scripts/: UWB_TF.py  tagPose.py
UWB/workSpace/IndoorPostioning/: controlUWB.py  controlUWBBetter.py  tagPoseTest.py  (+1 more)
four_ws_control/scripts/: robot_control.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
patchwork-plusplus-ros/: README.md
patchwork-plusplus-ros/launch/: demo.launch.py
patchwork-plusplus-ros/rviz/: rviz1.rviz
py_ard/: CMakeLists.txt  package.xml  setup.cfg  setup.py
py_ard/py_ard/: auto.py  comms.py  updated_comms.py
teleop_twist_joy/config/: xbox.config.yaml
(+34 files in other folders)
