<package format="2">
  <name>LARI_urdf</name>
  <version>1.0.0</version>
  
  <description>
    <p>URDF Description package for LARI_urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for LARI_urdf robot</p>
  </description>
  
  <author>TODO</author>
  
  <maintainer email="TODO@email.com" />
  
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
